# Harness-Learning

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.playwright-mcp/: page-2026-07-05T13-24-44-976Z.yml  page-2026-07-05T13-25-33-665Z.yml  page-2026-07-05T13-27-54-056Z.yml  page-2026-07-05T13-28-10-640Z.yml  page-2026-07-05T13-41-56-251Z.yml  page-2026-07-05T13-42-44-417Z.yml  page-2026-07-05T13-42-53-051Z.yml  page-2026-07-05T13-48-32-044Z.yml  page-2026-07-05T13-49-14-217Z.yml  page-2026-07-05T13-49-27-087Z.yml  page-2026-07-05T13-49-35-186Z.yml  page-2026-07-05T13-49-42-793Z.yml  page-2026-07-05T13-55-49-550Z.yml  page-2026-07-05T13-57-00-658Z.yml  page-2026-07-05T14-13-26-585Z.yml  page-2026-07-05T14-13-39-792Z.yml  page-2026-07-05T14-24-34-519Z.yml  page-2026-07-05T14-26-38-683Z.yml
articles/: README.md  WRITING-GUIDE.md
cli/: main.py
docs/: README.md
pipeline/: README.md
products/: coding-agents.yaml
projects/: README.md
render/: feishu_sync.py  html_renderer.py  md_renderer.py  portfolio_md_renderer.py  portfolio_pptx_renderer.py  pptx_renderer.py
research/: README.md  index.md  log.md  purpose.md
scripts/: analyze_harness_collection.py  entity_scan.py  ingest_codex_official_posts.py  ingest_harness_collection.mjs  ingest_official_agent_posts.mjs  seed_demo_provenance.py  seed_phase4_dims.py  seed_phase5_hermes_manus.py
series/: README.md  WRITING-GUIDE.md
tests/: conftest.py  test_aggregator.py  test_aihot.py  test_atomic.py  test_cache.py  test_changelog_entry.py  test_changelog_ingest.py  test_claude_cli.py  test_cli.py  test_ingest.py  (+32 more)
(+1111 files in other folders)
