[project]
name = "ai-agent-competitive-analysis"
version = "0.1.0"
description = "AI Agent 竞品分析工作流 - 26 产品 4 模块管道"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "feedparser>=6.0",
    "anthropic>=0.39",
    "typer>=0.12",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[project.scripts]
wiki = "pipeline.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
